[package]
name = "ethaddr"
version = "0.1.0"
authors = ["Nicholas Rodrigues Lordello <nlordell@gmail.com>"]
edition = "2021"
description = "Ethereum 20-byte public address"
documentation = "https://docs.rs/ethaddr"
readme = "README.md"
homepage = "https://github.com/nlordell/ethaddr-rs"
repository = "https://github.com/nlordell/ethaddr-rs"
license = "MIT OR Apache-2.0"
keywords = ["public", "address", "ethereum"]
categories = ["cryptography::cryptocurrencies", "no-std"]

[workspace]
members = [
  "macros",
]

[features]
#default = ["checksum", "std"]
default = ["checksum", "macros", "serde", "std"]
checksum = ["sha3"]
macros = ["ethaddr-macros"]
std = ["serde?/std", "sha3?/std"]

[dependencies]
ethaddr-macros = { version = "0.1", path = "macros", optional = true }
serde = { version = "1", default-features = false, optional = true }
sha3 = { version = "0.10", default-features = false, optional = true }
