[package]
name = "ethaddr-macros"
version = "0.1.1"
authors = ["Nicholas Rodrigues Lordello <nlordell@gmail.com>"]
edition = "2021"
description = "Ethereum public address literals"
documentation = "https://docs.rs/ethaddr-macros"
readme = "README.md"
homepage = "https://github.com/nlordell/ethaddr-rs"
repository = "https://github.com/nlordell/ethaddr-rs"
license = "MIT OR Apache-2.0"
keywords = ["public", "address", "ethereum", "proc-macro"]
categories = ["cryptography::cryptocurrencies"]

[lib]
proc-macro = true

[dependencies]
sha3 = { version = "0.10", default-features = false }
